# mhb-server

./: Cargo.toml  LICENSE.md  Makefile.toml  README.md  docker-compose.yml
.github/workflows/: CI.yml
configuration/: base.yml  production.yml
entities/boulder/: Cargo.toml
entities/boulder/src/: boulder_model.rs  boulder_resolvers.rs  boulder_service.rs  lib.rs
entities/utils/src/: errors.rs
entity/: Cargo.toml
entity/src/: lib.rs
libs/boulder/: Cargo.toml
libs/boulder/src/: boulder_model.rs  boulder_mutations.rs  boulder_resolvers.rs  boulder_service.rs
libs/utils/: Cargo.toml
migrations/: 0002_create_boulder_and_ascents_table.sql  0003_create_users_table.sql  20220831151416_create_boulder_table.sql
scripts/: init_db.sh  init_redis.sh
src/: config.rs  configuration.rs  dal.rs  error.rs  graphql.rs  handlers.rs  lib.rs  main.rs  models.rs  schema.rs  startup.rs
src/handlers/: boulder.rs  user.rs
src/models/: mod.rs  user.rs
src/routes/: health_check.rs
src/services/: user.rs
templates/: login.html
tests/api/: boulder.rs  health_check.rs  helpers.rs  main.rs
