[package]
name = "mhb-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
axum = { version = "0.7" }
chrono = "0.4.33"
serde = { version = "1.0", features = ["derive"] }
shuttle-axum = "0.38.0"
shuttle-runtime = "0.38.0"
shuttle-shared-db =  { version = "0.38.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono"] }
thiserror = "1.0.56"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"

[dev-dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde_json = "1.0"
uuid = { version = "1.7.0", features = ["v4"] }

