[package]
name = "mhb-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
askama = "0.12.1"
askama_axum = "0.4.0"
axum = { version = "0.7" }
axum-login = "0.13.1"
chrono = "0.4.33"
oauth2 = "4.4.2"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
shuttle-axum = "0.41.0"
shuttle-runtime = "0.41.0"
shuttle-shared-db =  { version = "0.41.0", features = ["postgres", "sqlx"] }
shuttle-secrets = "0.41.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono"] }
thiserror = "1.0.56"
time = "0.3.34"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"

[dev-dependencies]
serde_json = "1.0"
uuid = { version = "1.7.0", features = ["v4"] }

